--- a/05-rest-api/to-do/package.json
+++ b/05-rest-api/to-do/package.json
@@ -12,6 +12,7 @@
   "author": "zafarudin481",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "pg": "^8.13.1"
   }
