--- a/07-booking-app/server/package.json
+++ b/07-booking-app/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.3"
   }
 }
