add 404 Not Found controller to the route

--- a/07-booking-app/server/package.json
+++ b/07-booking-app/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node --env-file=.env --watch index.js",
-    "start": "node index.js"
+    "dev": "node --env-file=.env --watch server.js",
+    "start": "node server.js"
   },
   "author": "zafarudin481",
   "license": "ISC",
